--- a/src/index.css
+++ b/src/index.css
@@ -50,10 +50,10 @@ body {
 }
 
 ::-webkit-scrollbar-thumb {
-  background: linear-gradient(180deg, #a855f7, #ec4899);
+  background: linear-gradient(180deg, #2563eb, #3b82f6, #60a5fa);
   border-radius: 5px;
 }
 
 ::-webkit-scrollbar-thumb:hover {
-  background: linear-gradient(180deg, #9333ea, #db2777);
+  background: linear-gradient(180deg, #1d4ed8, #2563eb, #3b82f6);
 }
